--- a/src/components/SecondPart/SecondPart.css
+++ b/src/components/SecondPart/SecondPart.css
@@ -1,11 +1,17 @@
 .secondPart {
-  display: inline-block;
+  display: flex;
   background-color: white;
   width: 50%;
-  height: 800px;
+  height: 100vh;
   margin-top: 80px;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
-
+.main {
+  display: flex;
+  height: 100vh;
+}
 .currentDate {
   text-align: center;
   color: gray;
@@ -23,8 +29,8 @@
 .addIcon {
   color: rgb(55, 100, 184);
   position: fixed;
-  right: 5px;
-  bottom: 70px;
+  right: 20px;
+  bottom: 30px;
 }
 
 .title-color {
